--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,7 @@
 .container {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 100vh;
+    position:static;
+    
+  
         background:
     linear-gradient(135deg, #708090 21px, #d9ecff 22px, #d9ecff 24px, transparent 24px, transparent 67px, #d9ecff 67px, #d9ecff 69px, transparent 69px),
     linear-gradient(225deg, #708090 21px, #d9ecff 22px, #d9ecff 24px, transparent 24px, transparent 67px, #d9ecff 67px, #d9ecff 69px, transparent 69px)0 64px;
@@ -10,3 +9,9 @@
     background-size: 64px 128px;
     color: rgb(255, 255, 255);
 }
+
+@media only screen and (max-width: 600px) {
+    .mainItems {
+      grid-template-columns: auto;
+    }
+  }
